--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,143 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  display: flex;
+  justify-content: center;
+}
+
+.todo {
+  background-color: #eff1f2;
+  width: 700px;
+  padding-bottom: 25px;
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+}
+
+h1 {
+  color: #3b70cb;
+  text-decoration: underline;
+  text-align: center;
+}
+
+.todo-icon-container {
+  margin-right: 1rem;
+}
+
+.date-picker {
+  display: none;
+}
+
+.date-picker-icon {
+  color: #3b70cb;
+  font-size: 1.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.input-container {
+  background-color: #fff;
+  width: 90%;
+  padding: 25px 0px;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+
+.item-input {
+  font-size: 1.2rem;
+  height: 1.5rem;
+  width: 28rem;
+  border: none;
+  margin-left: 1.2rem;
+}
+
+.item-input:focus {
+  border: none;
+}
+
+.input-container button {
+  background-color: #3b70cb;
+  border: none;
+  color: #fff;
+  padding: 0.6rem 1.5rem;
+  border-radius: 5px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+}
+
+hr {
+  margin-top: 30px;
+  width: 90%;
+}
+
+.item-list {
+  margin-top: 30px;
+}
+
+label {
+  margin-right: 10px;
+  color: #797979;
+}
+.features {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
+  margin-right: 2rem;
+  margin-bottom: 30px;
+}
+
+select {
+  width: 10rem;
+  height: 2rem;
+  font-size: 1rem;
+  background-color: #fff;
+}
+
+.item {
+  font-size: 1.3rem;
+}
+
+.item p {
+  color: #4f4e55;
+}
+
+.added-date {
+  color: #757474;
+  display: flex;
+  align-items: center;
+  font-size: 0.9rem;
+  padding-top: 3px;
+}
+
+.items {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin-left: 30px;
+  align-items: self-end;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+}
+.item-icons {
+  margin-left: 60px;
+}
+
+.edit {
+  margin-right: 15px;
+  color: #54b5d2;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.delete {
+  color: #e35165;
+  font-size: 1.1rem;
+  cursor: pointer;
 }
